--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+git:
+  submodules: false
+
 matrix:
   include:
     - sudo: required
@@ -11,6 +14,10 @@ matrix:
       env: DOCKER_IMAGE=tmwh/virgil-manylinux1_i686
            PRE_CMD=linux32
            TEST_SCRIPT=ci/test-manylinux.sh
+
+before_install:
+  - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
+  - git submodule update --init --recursive
 
 install:
   - docker pull $DOCKER_IMAGE
