--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/virgil-crypto"]
 	path = src/virgil-crypto
-	url = git@github.com:VirgilSecurity/virgil-crypto.git
+	url = https://github.com/VirgilSecurity/virgil-crypto.git
