--- a/.travis.yml
+++ b/.travis.yml
@@ -1,40 +1,80 @@
 git:
   submodules: false
 
+language: generic
+
+env:
+  global:
+    - INSTALL_SCRIPT_PATH=./ci/osx/install.sh
+    - RUN_SCRIPT_PATH=./ci/osx/run.sh
+
 matrix:
   include:
-    - sudo: required
+    - os: linux
+      sudo: required
       services:
         - docker
       env: DOCKER_IMAGE=tmwh/virgil-manylinux1_x86_64
-           INSTALL_SCRIPT=ci/manylinux/install.sh
-           TEST_SCRIPT=ci/manylinux/test.sh
+           INSTALL_SCRIPT_PATH=ci/manylinux/install.sh
+           RUN_SCRIPT_PATH=ci/manylinux/run.sh
 
-    - sudo: required
+    - os: linux
+      sudo: required
       services:
         - docker
       env: DOCKER_IMAGE=tmwh/virgil-manylinux1_i686
            PRE_CMD=linux32
-           INSTALL_SCRIPT=ci/manylinux/install.sh
-           TEST_SCRIPT=ci/manylinux/test.sh
+           INSTALL_SCRIPT_PATH=ci/manylinux/install.sh
+           RUN_SCRIPT_PATH=ci/manylinux/run.sh
 
-    #- os: osx
-    #- language: generic
-    #- env: TOXENV=py32
+    # Building matrix manually because osx_image can't be used for matrix
+    - osx_image: xcode6.4
+      os: osx
+      env: PYENV_VERSION=2.7.12
+    - osx_image: xcode7.3
+      os: osx
+      env: PYENV_VERSION=2.7.12
+    - osx_image: xcode8
+      os: osx
+      env: PYENV_VERSION=2.7.12
 
-    #- os: osx
-    #- language: generic
-    #- env: TOXENV=py33
+    - osx_image: xcode6.4
+      os: osx
+      env: PYENV_VERSION=3.3.6
+    - osx_image: xcode7.3
+      os: osx
+      env: PYENV_VERSION=3.3.6
+    - osx_image: xcode8
+      os: osx
+      env: PYENV_VERSION=3.3.6
 
+    - osx_image: xcode6.4
+      os: osx
+      env: PYENV_VERSION=3.4.5
+    - osx_image: xcode7.3
+      os: osx
+      env: PYENV_VERSION=3.4.5
+    - osx_image: xcode8
+      os: osx
+      env: PYENV_VERSION=3.4.5
+
+    - osx_image: xcode6.4
+      os: osx
+      env: PYENV_VERSION=3.5.2
+    - osx_image: xcode7.3
+      os: osx
+      env: PYENV_VERSION=3.5.2
+    - osx_image: xcode8
+      os: osx
+      env: PYENV_VERSION=3.5.2
 
 before_install:
-  - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
   - git submodule update --init --recursive
 
 install:
-  - /bin/bash $INSTALL_SCRIPT
+  - $INSTALL_SCRIPT_PATH
 
 script:
-  - /bin/bash $TEST_SCRIPT
+  - $RUN_SCRIPT_PATH
   - ls wheelhouse/
 
