--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ env:
   global:
     - INSTALL_SCRIPT_PATH=./ci/osx/install.sh
     - RUN_SCRIPT_PATH=./ci/osx/run.sh
+    - PYTHON_VERSIONS="2.7.12 3.3.6 3.4.5 3.5.2"
 
 matrix:
   include:
@@ -30,43 +31,10 @@ matrix:
     # Building matrix manually because osx_image can't be used for matrix
     - osx_image: xcode6.4
       os: osx
-      env: PYENV_VERSION=2.7.12
     - osx_image: xcode7.3
       os: osx
-      env: PYENV_VERSION=2.7.12
     - osx_image: xcode8
       os: osx
-      env: PYENV_VERSION=2.7.12
-
-    - osx_image: xcode6.4
-      os: osx
-      env: PYENV_VERSION=3.3.6
-    - osx_image: xcode7.3
-      os: osx
-      env: PYENV_VERSION=3.3.6
-    - osx_image: xcode8
-      os: osx
-      env: PYENV_VERSION=3.3.6
-
-    - osx_image: xcode6.4
-      os: osx
-      env: PYENV_VERSION=3.4.5
-    - osx_image: xcode7.3
-      os: osx
-      env: PYENV_VERSION=3.4.5
-    - osx_image: xcode8
-      os: osx
-      env: PYENV_VERSION=3.4.5
-
-    - osx_image: xcode6.4
-      os: osx
-      env: PYENV_VERSION=3.5.2
-    - osx_image: xcode7.3
-      os: osx
-      env: PYENV_VERSION=3.5.2
-    - osx_image: xcode8
-      os: osx
-      env: PYENV_VERSION=3.5.2
 
 before_install:
   - git submodule update --init --recursive
